# ctr-pred-sys

./: .flake8  README.md  bentofile.yaml  pyproject.toml
configs/: config.yaml  data.yaml  dcn_v2.yaml  deepfm.yaml  lgbm.yaml
src/: __init__.py
src/datasets/: __init__py  criteo.py
src/layers/: __init__.py  dense_layer.py  embedding_layer.py  interaction_layer.py
src/models/: __init__.py  base_model.py  dcn_v2.py  deepfm.py  lgbm.py
src/preprocessing/: preprocess.py
src/serving/: runners.py  service.py
src/trainers/: eval.py  train.py
src/utils/: load.py
