[tool.poetry]
name = "ctr-pred-sys"
version = "0.1.0"
description = ""
authors = ["Yeom, Eunji <euyeom@ea.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.24.3"
pandas = "1.5.3"
scipy = "1.9.3"
torch = "1.13.1"
scikit-learn = "1.2.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
